--- a/MoreLinq/MoreLinq.csproj
+++ b/MoreLinq/MoreLinq.csproj
@@ -10,7 +10,6 @@
         - Acquire
         - Aggregate (some EXPERIMENTAL)
         - AggregateRight
-        - Append
         - Assert
         - AssertCount
         - AtLeast
@@ -26,12 +25,10 @@
         - CountBy
         - CountDown
         - Consume
-        - DistinctBy
         - EndsWith
         - EquiZip
         - Evaluate
         - Exactly
-        - ExceptBy
         - Exclude
         - FallbackIfEmpty
         - FillBackward
@@ -52,9 +49,9 @@
         - Lag
         - Lead
         - LeftJoin
-        - MaxBy
+        - MaxElementsBy
         - Memoize (EXPERIMENTAL)
-        - MinBy
+        - MinElementsBy
         - Move
         - OrderBy
         - OrderedMerge
@@ -66,7 +63,6 @@
         - Partition
         - Permutations
         - Pipe
-        - Prepend
         - PreScan
         - Random
         - RandomDouble
@@ -117,9 +113,9 @@
     <Copyright>$([System.Text.RegularExpressions.Regex]::Replace($(Copyright), `\s+`, ` `).Trim())</Copyright>
     <AssemblyTitle>MoreLINQ</AssemblyTitle>
     <NeutralLanguage>en-US</NeutralLanguage>
-    <VersionPrefix>3.3.2</VersionPrefix>
+    <VersionPrefix>4.0.0</VersionPrefix>
     <Authors>MoreLINQ Developers.</Authors>
-    <TargetFrameworks>net451;netstandard1.0;netstandard2.0</TargetFrameworks>
+    <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <!-- Parallel build is disabled to avoid file locking issues during T4 code generation.
          See also: https://github.com/dotnet/msbuild/issues/2781 -->
@@ -180,29 +176,9 @@
     </None>
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net451'">
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System" />
-  </ItemGroup>
-
-  <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0' Or '$(TargetFramework)' == 'net451' ">
+  <PropertyGroup>
     <DefineConstants>$(DefineConstants);MORELINQ</DefineConstants>
   </PropertyGroup>
-
-  <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard1.0'">
-    <DefineConstants>$(DefineConstants);MORELINQ;NO_SERIALIZATION_ATTRIBUTES;NO_EXCEPTION_SERIALIZATION;NO_TRACING;NO_COM;NO_ASYNC</DefineConstants>
-  </PropertyGroup>
-
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard1.0'">
-    <Compile Remove="ToDataTable.cs" />
-    <Compile Remove="Extensions.ToDataTable.g.cs" />
-  </ItemGroup>
-
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard1.0' Or '$(TargetFramework)' == 'net451'">
-    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
-  </ItemGroup>
 
   <ItemGroup>
     <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
